--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,10 @@ ol[role='list'] {
     list-style: none;
 }
 
+ul {
+    list-style-type: none;
+}
+
 /* Set core root defaults */
 html:focus-within {
     scroll-behavior: smooth;
@@ -74,13 +78,93 @@ select {
     }
 }
 
-/* Font Styles */
-.nav-logo-text {}
+/* Base Styles */
+h1,
+h2 {
+    margin-bottom: 15px;
+}
 
-.hero-primary-text {}
+.nav-logo-text {
+    font-size: 24px;
+    color: white;
+}
 
-.hero-secondary-text {}
+.hero-primary-text {
+    font-size: 48px;
+    font-weight: bold;
+    color: white;
 
-.header-primary {}
+}
 
-.quote-text {}
+.hero-secondary-text {
+    font-size: 18px;
+    color: white;
+}
+
+.h2-primary {
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.quote-text {
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+}
+
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 30px;
+}
+
+footer a {
+    color: white;
+}
+
+.nav a {
+    text-decoration: none;
+    color: white;
+}
+
+/* NAV */
+
+.nav {
+    background-color: #1F2937;
+    height: 60px;
+}
+
+.nav .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
+
+.nav ul {
+    display: flex;
+}
+
+.nav ul li {
+    margin-left: 20px;
+}
+
+/* HEADER */
+.header {
+    background-color: #1F2937;
+}
+
+/* FOOTER */
+
+footer {
+    height: 100px;
+    background-color: #1F2937;
+    color: white;
+}
+
+footer .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
