--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,7 @@ footer p {
 }
 
 .primary-button {
+    cursor: pointer;
     padding: 10px 40px;
     margin-top: 20px;
     background-color: #3882F6;
@@ -183,10 +184,31 @@ footer p {
     font-weight: bold;
 }
 
+.primary-button:hover {
+    padding: 10px 40px;
+    margin-top: 20px;
+    background-color: #0054dc;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
 .secondary-button {
     padding: 10px 40px;
+    cursor: pointer;
     background-color: #3882F6;
     color: white;
+    border: 2px solid white;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.secondary-button:hover {
+    padding: 10px 40px;
+    cursor: pointer;
+    background-color: white;
+    color: #3882F6;
     border: 2px solid white;
     border-radius: 5px;
     font-weight: bold;
